samples/_failures_safe/1761486933_3faecd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_901a73d5.c: In function ‘main’:
./samples/SAFE/__tmp_901a73d5.c:158:9: error: expected expression at end of input
  158 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_901a73d5.c:158:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_901a73d5.c:158:9: error: expected declaration or statement at end of input
